--- a/index.html
+++ b/index.html
@@ -513,14 +513,14 @@
         <div class="row section">
             <div class="row walkMap">
                 <!--  Walk Map  -->
-                <div class="col-md-5">
+                <div class="col-md-4">
                     <div id="walk_map_vis"></div>
                 </div>
 
                 <!--      Info about walk         -->
-                <div class="col-md-7" style="padding-left: 30px; padding-right: 50px;">
+                <div class="col-md-8" style="padding-left: 70px; padding-right: 50px;">
                     <div id="walk_map_info">
-                        <h1 style="margin-bottom: 15px;">Learn about the animals you could see on a walk in Central Park! </h1>
+                        <h1 style="margin-bottom: 15px;">Learn about the wildlife you'd see on a walk in Central Park! </h1>
                         <p><strong>Instructions: </strong></p>
                         <ul>
                             <li>Using the tool bar on the left, draw line segments (a walk) on the map.</li>
@@ -528,9 +528,9 @@
                             <li> The shorter your line segments, the more accurate your walk information will be.</li>
                             <li>Click "Finish" on the tool bar when you are ready to learn about your walk!</li>
                         </ul>
-                        <div class="card mb-4 shadow-sm walkCard">
-                            <div class="card-header">Your Walk</div>
-                            <div class="card-body">
+                        <div class="row">
+                            <div class="walkBox">
+                                <h5 style="text-align: center;">Your Walk</h5>
                                 <div class="row walkBody">
                                     <div class="col-sm labels">
                                         <p>Max # of Squirrels You May See: </p>
@@ -547,6 +547,7 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
 
 
