--- a/index.html
+++ b/index.html
@@ -591,7 +591,8 @@
                     <div class="col-md-4">
                         <img class="mugshot centerItems" src="images/jadafinal.png" alt="Jada Lee">
                         <h1 class="centerMugshot">Jada Lee</h1>
-                        <p>I'm pretty sure I was a plant in a past life. Specifically an apple tree.</p>
+                        <p>Jada is a senior at Harvard studying Anthropology and CS. More importantly, she is an avid squirrel enthusiast.
+                            Hailing from MN, she grew up seeing countless squirrels in her yard! </p>
                     </div>
                     <div class="col-md-4">
                         <img class="mugshot centerItems" src="images/lizzyfinal.png" alt="Elizabeth Ling">
