--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h1 id="comparingSquirNum"></h1>
             </div>
             <div id="hookSquirrelDiv" >
-                <img data-src="../squirrels/images/squirrel-standing.png" alt="squirrels" width="100px">
+                <img data-src="../squirrels/images/squirrel-standing.png" alt="squirrels" width="150px">
             </div>
 
         </div>
@@ -544,9 +544,7 @@
 
                         <br> The bar vis below shows frequencies on the entire dataset, not
                         just the sample. Note that some squirrels may have been spotted doing
-                        multiple activities or no activities at all, so the total does not
-                        always equal 2373, and bar graph counts do not always correspond to
-                        distinct squirrels.
+                        multiple activities or no activities at all.
                     </div>
                     <div id="bar_vis"></div>
                 </div>
