fixed trivia section and conclusion

--- a/index.html
+++ b/index.html
@@ -355,7 +355,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="trivia-Margins bold-heading">Trivia Time!</h1>
-                        <p>Now that we've analyzed the census takers' stories, we'll turn to the squirrels themselves - see if you can answer these squirrel trivia questions!</p>
+                        <p>Now that we've analyzed the census takers' stories, we'll turn to the squirrels themselves
+                            - see if you can answer these squirrel trivia questions!</p>
                         <br>
                         <br>
                     </div>
@@ -404,7 +405,7 @@
 
                     <div class="col-md-4">
                         <div class="question">
-                            <h3>"Quaas" are the most common sounds squirrels make.</h3>
+                            <h3>The most common sounds that Eastern gray squirrels make are "quaas".</h3>
                             <br>
                         </div>
                         <div class="answer-margins">
@@ -421,7 +422,7 @@
                         </div>
                     </div>
                 </div>
-                <br> <br> <br>
+                <br> <br>
                 <div id="moreQuestionsDiv">
                     <button class="squirButton" id="moreQuestions">More Questions</button>
                 </div>
@@ -490,7 +491,7 @@
                         </div>
                     </div>
                 </div>
-                <br> <br> <br>
+                <br> <br>
             </div>
 
 
