--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-6" style="display: flex;flex-direction: column;align-items: flex-end;justify-content: space-between;">
+                    <div class="col-md-6" style="display: flex;flex-direction: column;align-items: flex-end;justify-content: space-around;">
                         <div class="row imageHolder">
                             <img src="../squirrels/images/central_park_icon.png"
                                  alt="Central Park" height="250px">
